Fixing layout of change commodity codes popup
Fields were misaligned horizontally.
Changed structure so they align

--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -339,3 +339,7 @@ fieldset + fieldset {
     font-weight: 400;
   }
 }
+
+.form-hint--marginless {
+  margin-bottom: 0 !important;
+}
